# defenx-nlp

./: .gitignore  README.md  pyproject.toml
defenx_nlp/: __init__.py  backends.py  encoder.py  inference.py  interfaces.py  pipeline.py  retrieval.py  schemas.py
docs/: api_reference.md
examples/: v2_pipeline.py
tests/: test_encoder.py  test_v2.py
