[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ── Project metadata (PEP 621) ────────────────────────────────────────────────
[project]
name            = "defenx-nlp"
version         = "1.0.1"
description     = "Semantic NLP intelligence toolkit — encoding, embeddings, GPU/CPU device handling, and reusable inference interfaces."
readme          = "README.md"
license         = { file = "LICENSE" }
requires-python = ">=3.9"

authors = [
    { name = "DEFENX", email = "defenx@zohomail.in" },
]

keywords = [
    "nlp", "sentence-transformers", "embeddings", "semantic-search",
    "cuda", "pytorch", "anomaly-detection", "behavioral-analytics",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Operating System :: OS Independent",
]

# ── Core dependencies ─────────────────────────────────────────────────────────
dependencies = [
    "numpy>=1.24",
    "sentence-transformers>=2.2.0",
    # torch remains a core dependency so the package works out of the box.
    # Users who want a CUDA build can reinstall torch from the matching
    # PyTorch index after installing defenx-nlp.
    "torch>=2.0",
]

# ── Optional extras ───────────────────────────────────────────────────────────
[project.optional-dependencies]
# CUDA torch cannot be specified via extras because it ships from a separate
# index URL. Reinstall torch manually with the appropriate CUDA wheel if needed.
cpu = ["torch>=2.0"]
# pip install defenx-nlp[dev]
dev    = ["pytest>=7.4", "pytest-cov", "ruff", "mypy", "twine", "build"]
# pip install defenx-nlp[docs]
docs   = ["mkdocs>=1.5", "mkdocs-material>=9.0"]

[project.urls]
Homepage    = "https://github.com/defenx-sec/defenx-nlp"
Repository  = "https://github.com/defenx-sec/defenx-nlp"
Issues      = "https://github.com/defenx-sec/defenx-nlp/issues"

# ── Package discovery ─────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where   = ["."]
include = ["defenx_nlp*"]

# ── Ruff linting ──────────────────────────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

# ── Mypy type checking ────────────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.9"
ignore_missing_imports = true
strict                 = false

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"
filterwarnings = ["ignore::UserWarning"]
